--- a/testdata/foundry.toml
+++ b/testdata/foundry.toml
@@ -4,15 +4,18 @@ test = "./"
 optimizer = true
 optimizer_runs = 200
 via_ir = false
+evm_version = "cancun"
 ignored_error_codes = [
     1878, # SPDX license identifier not provided
     2018, # Function state mutability can be restricted
     2072, # Unused local variable
+    2424, # Natspec memory-safe-assembly special comment deprecated
     2519, # This declaration shadows an existing declaration
     3860, # Contract init code size exceeds limit
     5159, # Selfdestruct has been deprecated
     5574, # Contract code size exceeds limit
     5667, # Unused function parameter
+    9207, # 'transfer' is deprecated
 ]
 extra_output = ["storageLayout"]
 
