--- a/Cargo.toml
+++ b/Cargo.toml
@@ -278,7 +278,7 @@ foundry-compilers = { version = "0.19.10", default-features = false, features = 
     "rustls",
     "svm-solc",
 ] }
-foundry-fork-db = "0.21"
+foundry-fork-db = "0.22"
 solang-parser = { version = "=0.3.9", package = "foundry-solang-parser" }
 solar = { package = "solar-compiler", version = "=0.1.8", default-features = false }
 svm = { package = "svm-rs", version = "0.5", default-features = false, features = [
@@ -338,12 +338,12 @@ op-alloy-rpc-types = "0.23.1"
 op-alloy-flz = "0.13.1"
 
 ## alloy-evm
-alloy-evm = "0.25.2"
-alloy-op-evm = "0.25.2"
+alloy-evm = "0.26.3"
+alloy-op-evm = "0.26.3"
 
 # revm
 revm = { version = "34.0.0", default-features = false }
-revm-inspectors = { version = "0.33.2", features = ["serde"] }
+revm-inspectors = { version = "0.34.0", features = ["serde"] }
 op-revm = { version = "15.0.0", default-features = false }
 
 ## cli
@@ -423,7 +423,10 @@ tower-http = "0.6"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 url = "2"
-vergen = { version = "9", default-features = false, features = ["build", "cargo"] }
+vergen = { version = "9", default-features = false, features = [
+    "build",
+    "cargo",
+] }
 vergen-git2 = "9"
 yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
 path-slash = "0.2"
@@ -437,7 +440,9 @@ flate2 = "1.1"
 ethereum_ssz = "0.10"
 
 # Tempo
-tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v0.7.5", default-features = false, features = ["serde"] }
+tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v0.7.5", default-features = false, features = [
+    "serde",
+] }
 
 ## Pinned dependencies. Enabled for the workspace in crates/test-utils.
 
@@ -492,18 +497,18 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 
 ## alloy-evm
-alloy-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "staging-revm" }
-alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "staging-revm" }
+# alloy-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "staging-revm" }
+# alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "staging-revm" }
 
 ## revm
 # revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
 # op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
-revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", branch = "staging-revm" }
+# revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", branch = "staging-revm" }
 
 ## foundry
 # foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
 # foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", branch = "main" }
-foundry-fork-db = { git = "https://github.com/rakita/foundry-fork-db", branch = "staging-revm" }
+# foundry-fork-db = { git = "https://github.com/rakita/foundry-fork-db", branch = "staging-revm" }
 
 # solar
 solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
