--- a/.github/workflows/test-flaky.yml
+++ b/.github/workflows/test-flaky.yml
@@ -1,4 +1,4 @@
-# Daily CI job to run flaky tests that are ignored in regular CI
+# Daily CI job to run flaky tests that are excluded from regular CI via nextest default-filter
 
 name: test-flaky
 
@@ -43,7 +43,7 @@ jobs:
           SVM_TARGET_PLATFORM: linux-amd64
           HTTP_ARCHIVE_URLS: ${{ secrets.HTTP_ARCHIVE_URLS }}
           ETHERSCAN_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
-        run: cargo nextest run --run-ignored ignored-only -E 'test(/^flaky_/)' --no-fail-fast
+        run: cargo nextest run --profile flaky --no-fail-fast
 
   # If any of the jobs fail, this will create a normal-priority issue to signal so.
   issue:
