--- a/Cargo.toml
+++ b/Cargo.toml
@@ -509,7 +509,7 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", rev = "b4299fc" }
 
 # solar
-solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
-solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
-solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
-solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
+solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", branch = "feat/typeck-override-checker" }
+solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar", branch = "feat/typeck-override-checker" }
+solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar", branch = "feat/typeck-override-checker" }
+solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar", branch = "feat/typeck-override-checker" }
